# Turret

./: .gitignore  README.md  cmdline.txt  config.txt  install_machine_gun.sh  install_main.sh  install_main_and_websocket.sh  install_motor_control.sh  install_node_js.sh  install_python_lib.sh  install_quadro.sh  install_video_streamer.sh  ip_routes.sh  machine_gun_main.service  machine_gun_motor_control_main.service  machine_gun_websocket.service  quadro_main.service  quadro_rear_sight.service  quadro_video_streamer.service  quadro_websocket_server.service  rpi_poweroff.py
drive_main/: main.py
drive_main/app/: diagnostic.py  ws_client.py
machine_gun_main/: diagnostic.py  drive_plate_listener.py  logger.py  main.py  system_info.py  ws_client.py
motor_control_main/: main.py
motor_control_main/app/: diagnostic.py  logger.py  socket_pulse.py  ws_client.py
rear_sight/: CMakeLists.txt  README.md  app.js  main.cpp  run_driven.sh  web_server_worker.cpp  web_server_worker.h
rear_sight/holder_processing/: holder_controller.cpp  holder_controller.h
rear_sight/holder_processing/spi_library/: spi.cpp  spi.h
rear_sight/logging/: LOG.h
rear_sight/process_camera/: rear_sight_webrtc_manipulation.cpp  rear_sight_webrtc_manipulation.h
rear_sight/process_camera/ballistic_calculator/: ballistic_calculator.cpp  ballistic_calculator.h
rear_sight/process_camera/native_camera_eye/: CameraThread.cpp  CameraThread.h  EventLoop.cpp  EventLoop.h  Eye.cpp  Eye.h  Tracker.cpp  Tracker.h
rear_sight/process_camera/rear_sight_processor/: image_processing.h  rear_sight_processor.h  rear_sight_processor_keep_frame_proportionality.cpp
rear_sight/rpi_autorun_config/: machine_gun_rear_sight.service
rear_sight/src/server_files/: index.html  manifest.json  package-lock.json  package.json  quad.html  test_gamepad.html
rear_sight/src/server_files/components/scripts/: WSADKeys.js  app.js  config_device.js  config_geometry.js  config_stepper.js  config_ws2.js  cookies.js  coordinates.js  distInfo.js  gamepad.js  keyboardMouseKeys.js  measuring.js  quad_app.js  quad_keys.js  themes.js
rear_sight/src/server_files/components/scripts/lib/: CSSPlugin.min.js  EasePack.min.js  TweenLite.min.js  interact.min.js  jquery.rsSliderLens.js  rulez.min.js  slide-ruler.js
rear_sight/src/server_files/components/scripts/training/: training.js
rear_sight/src/server_files/components/styles/: app_view.css
rear_sight/web_server/: web_server.cpp  web_server.h
rear_sight/web_server/lib_my_event_handler/: event_ws.cpp  event_ws.h
rear_sight/web_server/ssl/certs/: nginx-selfsigned.crt
rear_sight/web_server/ssl/private/: nginx-selfsigned.key
rear_sight/web_server/web_server_events/: body_moving_events.h  camera_roi_events.h  control_mode_events.h  holder_commands.h  web_server_events.h
video_streamer/: start.sh
websocket_server/: system_info.py  ws_server.py
